# kivu_limnic_scenarios

./: .gitignore  LICENSE  README.md  app.py  environment.yml  osmnx_extract.py  pyproject.toml  requirements.txt
configs/: base.yml  scenarios.yml  thresholds.yml
data/processed/: dem_aligned.tif  dem_sim_500m.tif  gadm_aoi_utm.geojson  mask_land.tif  pop_aligned.tif  pop_sim_500m_counts.tif  source_point.geojson  static_layers.json
data/raw/: PLACE_LAKE_OUTLINE_HERE.txt  PLACE_YOUR_DEM_HERE.txt  PLACE_YOUR_POPULATION_HERE.txt  gadm_aoi.geojson
docs/: index.html
docs/scenarios/: index.json
docs/scenarios/scenario_42fece1e/: manifest.json  scenario.json
docs/scenarios/scenario_a80c8317/: manifest.json  scenario.json
docs/scenarios/scenario_c493b6c1/: metrics_10min.csv
notebooks/: 02_single_run_debug.ipynb  04_single_run_paper_spec_poc_v2.ipynb  kivu_limnic_math_spec.md  kivu_web_viewer_plan.md
notebooks/data/processed/: grad_mag.tif  grid_template.tif  grid_template_sim_500m.tif  mask_lake.tif  mask_water.tif  source_index.json  static_layers.json  u_slope.tif  v_slope.tif
notebooks/runs/single_run/: metrics_hourly.csv  scenario_config.json
osm/: aoi.geojson
scenarios/: index.json
scenarios/scenario_42fece1e/: metrics_10min.csv
scenarios/scenario_a80c8317/: metrics_10min.csv
scenarios/scenario_aaafd9f3/: manifest.json  metrics_10min.csv  scenario.json
scenarios/scenario_c493b6c1/: manifest.json  scenario.json
scenarios/scenario_f34006b4/: manifest.json  metrics_10min.csv  scenario.json
src/kivu/: __init__.py
web/: index.html
(+30 files in other folders)
